test/error/DynamicArrayLeakReturn.ci
public static class Test
{
	// FIXME:
	static int[] Create() => new int[4]; //ERROR: Dynamically allocated array must be assigned to a  reference

	public static bool Run()
	{
		return true;
	}
}
